--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <meta name="description" content="O mova-se é um site educacional, 
     com a proposta de fazer reservas e pacotes de viagens 
     com esportes radicais.">
+
+    <!--Buscando o css externo-->
+    <link rel="stylesheet" href="css/estilo.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -63,7 +71,7 @@
 
         <article class="card">
             <h2 class="titulo">Pacotes</h2>
-            <p>veja os pacotes disponíveis:</p>
+            <p>Veja os pacotes disponíveis:</p>
             <div class="card-conteudo">
                 <figure>
                     <img src="imagem/capa-terrestre.jpg" alt="Terrestre">
@@ -87,7 +95,7 @@
         <article>
             <div id="video">
                 <h2 class="titulo" id="titulo-video">Vídeo Radical</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/LPO5BZnzuIs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="100%" height="350" src="https://www.youtube.com/embed/LPO5BZnzuIs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </article>
     </main>
