--- a/acessorios.html
+++ b/acessorios.html
@@ -9,6 +9,14 @@
     <meta name="description" content="O mova-se é um site educacional, 
     com a proposta de fazer reservas e pacotes de viagens 
     com esportes radicais.">
+
+    <!--Buscando o css externo-->
+    <link rel="stylesheet" href="css/estilo.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -29,7 +37,86 @@
 
 
     <main id="conteudo">
-    <p>Página acessorio</p>
+        <div class="conteudo-info">
+            <article>
+                <h2 class="titulo">Acessórios</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Explicabo tempora voluptate, corporis sapiente, at ex,
+                    reprehenderit fugit mollitia dolore ipsam nobis. Autem
+                    nesciunt ad maxime rem qui natus voluptate beatae!</p>
+                <div class="acessorios">
+                    <div class="produtos">
+                        <div class="img-produto">
+                            <img src="imagem/bota.jpg" alt="produto bota">
+                        </div>
+                        <h4>BOTA</h4>
+                        <p>Descrição do item.</p>
+                        <div class="acesse">Acesse</div>
+
+                    </div>
+                    <div class="produtos">
+                        <div class="img-produto">
+                            <img src="imagem/mochila.jpg" alt="Mochila">
+                        </div>
+                        <h4>Cargueira para trekking</h4>
+                        <p>Descrição do item.</p>
+                        <div class="acesse">Acesse</div>
+
+                    </div>
+                    <div class="produtos">
+                        <div class="img-produto">
+                            <img src="imagem/luvas.jpg" alt="luvas">
+                        </div>
+                        <h4>Luvas para trekking</h4>
+                        <p>Descrição do item.</p>
+                        <div class="acesse">Acesse</div>
+                    </div>
+                </div>
+                <div class="acessorios">
+                    <div class="produtos">
+                        <div class="img-produto">
+                            <img src="imagem/capacete.jpg" alt="capacete">
+                        </div>
+                        <h4>Capacete</h4>
+                        <p>Descrição do item.</p>
+                        <div class="acesse">Acesse</div>
+
+                    </div>
+                    <div class="produtos">
+                        <div class="img-produto">
+                            <img src="imagem/squeeze.jpg" alt="Squeeze">
+                        </div>
+                        <h4>Squeeze</h4>
+                        <p>Descrição do item.</p>
+                        <div class="acesse">Acesse</div>
+
+                    </div>
+                    <div class="produtos">
+                        <div class="img-produto">
+                            <img src="imagem/sapatilha-escalada.jpg" alt="sapatilha de escalada">
+                        </div>
+                        <h4>Sapatilha</h4>
+                        <p>Descrição do item.</p>
+                        <div class="acesse">Acesse</div>
+
+                    </div>
+
+
+                </div>
+
+
+
+
+            </article>
+
+        </div>
+
+
+
+
+
+
+
     </main>
     <footer class="rodape">
         <div class="rodape-conteudo">
@@ -61,8 +148,8 @@
             </div>
         </div>
         <div class="assinatura">
-            <p>Desenvolvido por <b>SEU NOME</b> Site acadêmico | 
-                Todos os direitos reservados | 
+            <p>Desenvolvido por <b>SEU NOME</b> Site acadêmico |
+                Todos os direitos reservados |
                 SENAC TITO &copy; 2023</p>
 
         </div>
