--- a/pacotes.html
+++ b/pacotes.html
@@ -9,6 +9,13 @@
     <meta name="description" content="O mova-se é um site educacional, 
     com a proposta de fazer reservas e pacotes de viagens 
     com esportes radicais.">
+
+    <!--Buscando o css externo-->
+    <link rel="stylesheet" href="css/estilo.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +36,54 @@
 
 
     <main id="conteudo">
-      <p>Página pacotes</p>
+        <article>
+            <h2 class="titulo">Pacotes</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis architecto impedit saepe ipsam
+                similique repellat totam amet alias quod nam. Dolorem consequatur ducimus eum tenetur, nemo consequuntur
+                quam rerum delectus?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex iure inventore officiis molestiae quam animi,
+                corrupti magnam obcaecati? Ipsa ut dolore qui nobis amet consequuntur voluptatibus quaerat, molestiae
+                soluta officiis!</p>
+            <div class="card" id="card-pacote">
+                <section class="card-pacote-info">
+                    <img src="imagem/mountain-bike.jpg" alt="bike na montanha">
+                    <h3>TRILHA DE BIKE</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit totam quidem sit
+                        expedita dolorem dolor doloremque provident perspiciatis laboriosam quibusdam fuga voluptates
+                        deleniti, eligendi esse illo praesentium, maiores alias!</p>
+                    <div class="pac-flex">
+                        <div class="pac-fotos"><a href="#">Fotos</a></div>
+                        <div class="pac-reserva"><a href="#">Reserva</a></div>
+                    </div>
+                </section>
+                <section class="card-pacote-info">
+                    <img src="imagem/trilha2.jpg" alt="trilha em família">
+                    <h3>TRILHA EM FAMÍLIA</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit totam quidem sit
+                        expedita dolorem dolor doloremque provident perspiciatis laboriosam quibusdam fuga voluptates
+                        deleniti, eligendi esse illo praesentium, maiores alias!</p>
+                    <div class="pac-flex">
+                        <div class="pac-fotos"><a href="#">Fotos</a></div>
+                        <div class="pac-reserva"><a href="#">Reserva</a></div>
+                    </div>
+                </section>
+                <section class="card-pacote-info">
+                    <img src="imagem/trilha.jpg" alt="Trilha">
+                    <h3>TREKKING</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit totam quidem sit
+                        expedita dolorem dolor doloremque provident perspiciatis laboriosam quibusdam fuga voluptates
+                        deleniti, eligendi esse illo praesentium, maiores alias!</p>
+                    <div class="pac-flex">
+                        <div class="pac-fotos"><a href="#">Fotos</a></div>
+                        <div class="pac-reserva"><a href="#">Reserva</a></div>
+                    </div>
+                </section>
+
+
+
+            </div>
+
+        </article>
     </main>
 
     <footer class="rodape">
@@ -62,8 +116,8 @@
             </div>
         </div>
         <div class="assinatura">
-            <p>Desenvolvido por <b>SEU NOME</b> Site acadêmico | 
-                Todos os direitos reservados | 
+            <p>Desenvolvido por <b>SEU NOME</b> Site acadêmico |
+                Todos os direitos reservados |
                 SENAC TITO &copy; 2023</p>
 
         </div>
