--- a/pacotes.html
+++ b/pacotes.html
@@ -36,7 +36,7 @@
 
 
     <main id="conteudo">
-        <article>
+        <article class="conteudo-info">
             <h2 class="titulo">Pacotes</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis architecto impedit saepe ipsam
                 similique repellat totam amet alias quod nam. Dolorem consequatur ducimus eum tenetur, nemo consequuntur
