finalização do css, e inicio das Midias

--- a/contato.html
+++ b/contato.html
@@ -54,7 +54,7 @@
                             <input tabindex="6" required type="email" id="email" name="email">
                         </p>
                         <p>
-                            <label for="telefone">Celular</label>
+                            <label for="telefone">Celular:</label>
                             <input tabindex="7" required type="tel" id="telefone" name="telefone">
                         </p>
                         <p>
