--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                     <img src="imagem/montanha.jpg" alt="Imagem: Vale com montanhas">
                     <div class="text-destaque">
                         <h2>Montanha</h2>
-                        <p>Explore trilhas e cachoeiras em lugares incríveias.</p>
+                        <p>Explore trilhas e cachoeiras.</p>
                     </div>
                 </div>
                 <div class="cont-destaque">
                     <img src="imagem/arvores.jpg" alt="Imagem: Bosque de árvores">
                     <div class="text-destaque">
                         <h2>Terrestre</h2>
-                        <p>Explore trilhas e cachoeiras em lugares incríveias.</p>
+                        <p>Explore trilhas e cachoeiras.</p>
                     </div>
                 </div>
                 <div class="cont-destaque">
