--- a/acessorios.html
+++ b/acessorios.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 
 </head>
 
@@ -25,7 +26,9 @@
             <h1>
                 <a href="index.html"><img src="imagem/logo.png" alt="Logotipo"></a>
             </h1>
-            <nav>
+            <div id="iconMenu" class="material-symbols-outlined" onclick="clickMenu()">menu</div>
+            <nav id="itens">
+                
                 <a href="index.html" tabindex="1">Home</a>
                 <!--tabindex é utilizado para a acessibilidade-->
                 <a href="pacotes.html" tabindex="2">Pacotes</a>
@@ -34,6 +37,7 @@
             </nav>
         </div>
     </header>
+
 
 
     <main id="conteudo">
@@ -105,17 +109,9 @@
                 </div>
 
 
-
-
             </article>
 
         </div>
-
-
-
-
-
-
 
     </main>
     <footer class="rodape">
@@ -155,6 +151,7 @@
         </div>
 
     </footer>
+    <script src="js/jsinteracao.js"></script>
 
 </body>
 
