--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <!-- https://fonts.google.com/icons?selected=Material+Symbols+Outlined:settings:FILL@0;wght@400;GRAD@0;opsz@24 -->
+</head>
 
 </head>
 
@@ -29,7 +32,9 @@
             <h1>
                 <a href="index.html"><img src="imagem/logo.png" alt="Logotipo"></a>
             </h1>
-            <nav>
+            <div id="iconMenu" class="material-symbols-outlined" onclick="clickMenu()">menu</div>
+            <nav id="itens">
+                
                 <a href="index.html" tabindex="1">Home</a>
                 <!--tabindex é utilizado para a acessibilidade-->
                 <a href="pacotes.html" tabindex="2">Pacotes</a>
@@ -141,7 +146,9 @@
 
     </footer>
     <script src="js/jquery-3.7.0.min.js"></script>
+    <script src="js/jsinteracao.js"></script>
 <script src="slick/slick.min.js"></script>
+
 <script>
 $(document).ready(function(){
     // Inicialização/Ativação do plugin Slick
@@ -152,7 +159,8 @@ $(document).ready(function(){
         arrows: false
     });
 });   
- 
+
+
 </script> 
 
 </body>
