--- a/pacotes.html
+++ b/pacotes.html
@@ -17,79 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <style>
 
-        
-        /* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: #fefefe;
-  margin: auto;
-  padding: 0;
-  border: 1px solid #888;
-  width: 80%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-  -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.4s;
-  animation-name: animatetop;
-  animation-duration: 0.4s
-}
-
-/* Add Animation */
-@-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
-  to {top:0; opacity:1}
-}
-
-@keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
-}
-
-/* The Close Button */
-.close {
-  color: white;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.modal-header {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
-
-.modal-body {padding: 2px 16px;}
-
-.modal-footer {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
-    </style>
 </head>
 
 <body>
@@ -129,7 +57,7 @@
                         deleniti, eligendi esse illo praesentium, maiores alias!</p>
                     <div class="pac-flex">
                         <div class="pac-fotos"><a href="#">Fotos</a></div>
-                        <div class="pac-reserva"><a href="#">Reserva</a></div>
+                        <div class="pac-reserva" onclick="modalClick()"><a href="#">Reserva</a></div>
                     </div>
                 </section>
                 <section class="card-pacote-info">
@@ -140,7 +68,7 @@
                         deleniti, eligendi esse illo praesentium, maiores alias!</p>
                     <div class="pac-flex">
                         <div class="pac-fotos"><a href="#">Fotos</a></div>
-                        <div class="pac-reserva"><a href="#">Reserva</a></div>
+                        <div class="pac-reserva" onclick="modalClick()"><a href="#">Reserva</a></div>
                     </div>
                 </section>
                 <section class="card-pacote-info">
@@ -155,15 +83,13 @@
                     </div>
                 </section>
 
-
-
             </div>
 
         </article>
     </main>
 
 
-<!-- The Modal -->
+<!-- Modal -->
 <div id="mModal" class="modal">
 
     <!-- Modal content -->
@@ -174,8 +100,17 @@
       </div>
       <div class="modal-body">
         <p>Para a reserva mande um e-mail para nossa central</p><br>
-        <p>email@atendimento.com.br</p>
-      </div>
+        <p><strong>email@atendimento.com.br</strong></p><br>
+        <p>Se preferir entre com contato pelas redes:</p>
+     <br>
+      <div class="redes">
+        <aside>
+            <img src="imagem/facebook.png" alt="Logo do Facebook">
+            <img src="imagem/insta.png" alt="Logo do Instagram">
+            <img src="imagem/youtube.png" alt="Logo do Youtube">
+        </aside>
+    </div>
+</div>
      
     </div>
   
@@ -214,7 +149,7 @@
         <div class="assinatura">
             <p>Desenvolvido por <b>SEU NOME</b> Site acadêmico |
                 Todos os direitos reservados |
-                SENAC TITO &copy; 2023</p>
+                SENAC TITO &copy; 2024</p>
 
         </div>
 
